--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
         <p class="section-subtitle">Фото с прошлогодних новогодних постановок.</p>
 
         <div class="gallery-grid">
-          <div class="gallery-item"><img src="img/1.jpg"></div>
-          <div class="gallery-item"><img src="img/2.jpg"></div>
-          <div class="gallery-item"><img src="img/3.jpg"></div>
-          <div class="gallery-item"><img src="img/4.jpg"></div>
-          <div class="gallery-item"><img src="img/5.jpg"></div>
-          <div class="gallery-item"><img src="img/6.jpg"></div>
+          <div class="gallery-item"><img src="img/1.jpg?v=3"></div>
+          <div class="gallery-item"><img src="img/2.jpg?v=3"></div>
+          <div class="gallery-item"><img src="img/3.jpg?v=3"></div>
+          <div class="gallery-item"><img src="img/4.jpg?v=3"></div>
+          <div class="gallery-item"><img src="img/5.jpg?v=3"></div>
+          <div class="gallery-item"><img src="img/6.jpg?v=3"></div>
         </div>
       </div>
     </section>
