changed to webp

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="hero-poster reveal-on-scroll shifted">
-          <img src="img/afisha.jpg" alt="Афиша спектакля">
+          <img src="img/afisha.webp" alt="Афиша спектакля">
         </div>
       </div>
     </section>
@@ -80,7 +80,7 @@
           <p>Снегурочка и её подруга отправляются в путешествие, где дети в зале помогают героям пройти испытания и вернуть свет доброты.</p>
         </div>
         <div class="story-image">
-          <img src="img/dedmoroz.jpg" alt="Дед Мороз">
+          <img src="img/dedmoroz.webp" alt="Дед Мороз">
         </div>
       </div>
     </section>
@@ -91,12 +91,12 @@
         <p class="section-subtitle">Фото с прошлогодних новогодних постановок.</p>
 
         <div class="gallery-grid">
-          <div class="gallery-item"><img src="img/1.jpg?v=3" loading="lazy"></div>
-          <div class="gallery-item"><img src="img/2.jpg?v=3" loading="lazy"></div>
-          <div class="gallery-item"><img src="img/3.jpg?v=3" loading="lazy"></div>
-          <div class="gallery-item"><img src="img/4.jpg?v=3" loading="lazy"></div>
-          <div class="gallery-item"><img src="img/5.jpg?v=3" loading="lazy"></div>
-          <div class="gallery-item"><img src="img/6.jpg?v=3" loading="lazy"></div>
+          <div class="gallery-item"><img src="img/1.webp?v=3" loading="lazy"></div>
+          <div class="gallery-item"><img src="img/2.webp?v=3" loading="lazy"></div>
+          <div class="gallery-item"><img src="img/3.webp?v=3" loading="lazy"></div>
+          <div class="gallery-item"><img src="img/4.webp?v=3" loading="lazy"></div>
+          <div class="gallery-item"><img src="img/5.webp?v=3" loading="lazy"></div>
+          <div class="gallery-item"><img src="img/6.webp?v=3" loading="lazy"></div>
         </div>
       </div>
     </section>
