--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
     </div>
   </section>
 
+  <section class="top-banner">
+    <picture>
+      <source media="(min-width: 1024px)" srcset="img/banner.webp">
+      <source media="(min-width: 600px)" srcset="img/bannertablet.webp">
+      <img src="img/bannerphone.webp" alt="Новогоднее представление Однажды в Зимнем Царстве" class="banner-image">
+    </picture>
+  </section>
+
   <main>
 
     <section id="hero" class="hero-section">
@@ -48,9 +56,7 @@
           </div>
         </div>
 
-        <div class="hero-poster reveal-on-scroll shifted">
-          <img src="img/afisha.webp" alt="Афиша спектакля">
-        </div>
+      
       </div>
     </section>
 
