--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
     <section class="top-banner">
-      <div class="container banner-wrapper">
+      <div class="banner-wrapper">
         <a href="https://wa.me/77078500729" class="banner-button"></a>
         <picture>
           <source media="(min-width: 1024px)" srcset="img/banner.webp">
