--- a/index.html
+++ b/index.html
@@ -29,17 +29,22 @@
   </header>
 
 
-    <section class="top-banner">
-      <div class="banner-wrapper">
-        <a href="https://wa.me/77078500729" class="banner-button"></a>
-        <picture>
-          <source media="(min-width: 1024px)" srcset="img/banner.webp">
-          <source media="(min-width: 600px)" srcset="img/bannertablet.webp">
-          <img src="img/bannerphone.webp" alt="Новогоднее представление Однажды в Зимнем Царстве" class="banner-image">
-        </picture>
-          
-      </div>
-    </section>
+  <section class="top-banner">
+    <div class="banner-wrapper">
+      <picture>
+        <source media="(min-width: 1024px)" srcset="img/banner.webp">
+        <source media="(min-width: 600px)" srcset="img/bannertablet.webp">
+        <img src="img/bannerphone.webp"
+            alt="Новогоднее представление «Однажды в Зимнем Царстве»"
+            class="banner-image">
+      </picture>
+
+      <a href="https://wa.me/77078500729"
+        class="banner-button"
+        aria-label="Отправить заявку в WhatsApp"></a>
+    </div>
+  </section>
+
 
   <main>
 
