--- a/index.html
+++ b/index.html
@@ -67,29 +67,42 @@
       </div>
     </section>
 
-    <section id="about" class="section section-gold">
-      <div class="container section-inner reveal-on-scroll">
-        <h2 class="decor-title">Только три дня!</h2>
-        <p>Детский театр «Байтерек» приглашает на новогодний спектакль — добрую зимнюю сказку о чудесах, дружбе и волшебстве.</p>
-        <p>Каждый год театр готовит новые постановки, которые дарят детям улыбки, а родителям — тёплые воспоминания.</p>
+<section class="info-cards">
+  <h2>Только три дня!</h2>
 
-        <div class="section-facts">
-          <div class="fact-item">
-            <div class="fact-label">Продолжительность</div>
-            <div class="fact-value">1 час 30 минут</div>
-          </div>
-          <div class="fact-item">
-            <div class="fact-label">Возраст</div>
-            <div class="fact-value">от 3 лет</div>
-            <div class="fact-value">Детям до 4-х — бесплатно</div>
-          </div>
-          <div class="fact-item">
-            <div class="fact-label">Формат</div>
-            <div class="fact-value">семейный просмотр</div>
-          </div>
-        </div>
-      </div>
-    </section>
+  <p>
+    Детский театр «Байтерек» приглашает на новогодний спектакль — добрую зимнюю сказку 
+    о чудесах, дружбе и волшебстве.
+  </p>
+
+  <p>
+    Каждый год театр готовит новые постановки, которые дарят детям улыбки, 
+    а родителям — тёплые воспоминания.
+  </p>
+
+  <div class="cards-grid">
+    <div class="card">
+      <span class="card-title">Продолжительность</span>
+      <span class="card-text">1 час 30 минут</span>
+    </div>
+
+    <div class="card">
+      <span class="card-title">Возраст</span>
+      <span class="card-text">от 3 лет</span>
+    </div>
+
+    <div class="card">
+      <span class="card-title">Детям до 4-х</span>
+      <span class="card-text">бесплатно</span>
+    </div>
+
+    <div class="card">
+      <span class="card-title">Формат</span>
+      <span class="card-text">семейный просмотр</span>
+    </div>
+  </div>
+</section>
+
 
     <section id="story" class="section section-blue">
       <div class="container story-inner reveal-on-scroll">
