--- a/index.html
+++ b/index.html
@@ -159,49 +159,46 @@
       </div>
     </section>
 
-    <section id="contacts" class="section section-contacts">
-      <div class="container section-inner reveal-on-scroll">
-        <h2 class="decor-title">Контакты и билеты</h2>
+<section class="contacts-section">
+    <h2>Контакты и билеты</h2>
+    <p class="subtitle">Свяжитесь с нами любым удобным способом.</p>
 
-        <p class="section-subtitle">Свяжитесь с нами любым удобным способом.</p>
+    <div class="contacts-grid">
 
-        <div class="contacts-row">
-          <div class="contact-card">
-            <div class="contact-title">Адрес</div>
-            <div class="adress-text">Алматы, Абылай хана 83</div>
-            <a href="https://2gis.kz/almaty/search/%D0%90%D0%B1%D1%8B%D0%BB%D0%B0%D0%B9%20%D1%85%D0%B0%D0%BD%D0%B0%2083/firm/9429940001434790/76.940265%2C43.257161?m=76.88888%2C43.215307%2F12.64"
-            class="contact-link"
-            target="_blank">
-            Открыть в 2ГИС
-        </a>
-        </div>
-          <div class="contact-card">
-            <div class="contact-title">Телефон</div>
-            <a href="tel:+77078707526" class="contact-link">+7 707 870 75 26</a>
-            <a href="tel:+77078500729" class="contact-link">+7 707 850 07 29</a>
-          </div>
-
-          <div class="contact-card">
-            <div class="contact-title">WhatsApp</div>
-            <a href="https://wa.me/77078500729" class="contact-link">Написать</a>
-          </div>
-
-          <div class="contact-card">
-            <div class="contact-title">Instagram</div>
-            <a href="https://instagram.com/teatr_bayterek" class="contact-link">@teatr_bayterek</a>
-          </div>
-
-          <div class="contact-card">
-            <div class="contact-title">YouTube</div>
-            <a href="https://www.youtube.com/@ТеатрБайтерек" class="contact-link">Канал театра</a>
-          </div>
-        </div>
-
-        <div class="contacts-cta">
-          <a class="btn btn-primary btn-large" href="https://ticketon.kz/almaty/event/novogodnee-predstavlenie-odnazhdy-v-zimnem-tsarstve" target="_blank">Купить билеты</a>
-        </div>
+      <div class="contact-card">
+        <h3>Адрес</h3>
+        <p>Алматы, Абылай хана 83</p>
+        <a href="https://2gis.kz/almaty/firm/9429940001434790?m=76.940265%2C43.257161%2F16" target="_blank">Открыть в 2ГИС</a>
       </div>
-    </section>
+
+      <div class="contact-card">
+        <h3>Телефон</h3>
+        <p><a href="tel:+77078707526">+7 707 870 75 26</a></p>
+        <p><a href="tel:+77078500729">+7 707 850 07 29</a></p>
+      </div>
+
+      <div class="contact-card">
+        <h3>WhatsApp</h3>
+        <a class="contact-link" href="https://wa.me/77078500729" target="_blank">Написать</a>
+      </div>
+
+      <div class="contact-card">
+        <h3>Instagram</h3>
+        <a class="contact-link" href="https://instagram.com/teatr_bayterek" target="_blank">@teatr_bayterek</a>
+      </div>
+
+      <div class="contact-card wide">
+        <h3>YouTube</h3>
+        <a class="contact-link" href="https://www.youtube.com/channel/UCH7sLza2A3Saeee3feN5lyA" target="_blank">Канал театра</a>
+      </div>
+
+    </div>
+
+    <div class="tickets-wrapper">
+      <a href="https://ticketon.kz/almaty/event/novogodnee-predstavlenie-odnazhdy-v-zimnem-tsarstve?utm_source=web&amp%3Butm_medium=slaider&amp%3Butm_campaign=novogodnee-predstavlenie-odnazhdy-v-zimnem-tsarstve&creative_slot=center_6&promotion_name=" class="tickets-btn">Купить билеты</a>
+    </div>
+
+</section>
 
   </main>
 
