--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="#gallery">Галерея</a>
         <a href="#reviews">Отзывы</a>
         <a href="#contacts">Контакты</a>
+        <a href="#offers">Коммерческие предложения</a>
       </nav>
       <button class="burger" aria-label="Открыть меню">
         <span></span><span></span><span></span>
@@ -59,7 +60,10 @@
           <p class="hero-meta">26–28 декабря · Алматы · Детский театр «Байтерек»</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="https://ticketon.kz/almaty/event/novogodnee-predstavlenie-odnazhdy-v-zimnem-tsarstve" target="_blank">Купить билеты</a>
-            <a class="btn btn-ghost" href="#about">Подробнее</a>
+            <a href="https://wa.me/77078500729?text=Здравствуйте,%20не%20могли%20бы%20вы%20пожалуйста%20рассказать%20про%20мероприятие" class="btn btn-ghost" target="_blank">
+            Подробнее
+            </a>
+
           </div>
         </div>
 
@@ -102,6 +106,84 @@
     </div>
   </div>
 </section>
+
+<section class="section section-light">
+  <div class="container section-inner reveal-on-scroll">
+    <h2 class="decor-title">Специальные корпоративные пакеты</h2>
+
+    <div class="cards-grid">
+      <div class="card">
+        <span class="card-title">Пакет 1 — «Групповой»</span>
+        <p>Для 30–50 билетов</p>
+        <p>• Скидка 10%</p>
+        <p>• Резерв мест в одном секторе</p>
+        <p>• Приоритетный вход группы</p>
+      </div>
+
+      <div class="card">
+        <span class="card-title">Пакет 2 — «Корпоративный»</span>
+        <p>Для 50–150 билетов</p>
+        <p>• Скидка 15%</p>
+        <p>• Лучшие места в зале</p>
+        <p>• Персональный менеджер</p>
+      </div>
+
+      <div class="card">
+        <span class="card-title">Пакет 3 — «Премиум»</span>
+        <p>Для 150–300 билетов</p>
+        <p>• Скидка от 20%</p>
+        <p>• Резерв мест в одном секторе</p>
+        <p>• Бесплатная фотозона</p>
+        <p>• Логотип компании</p>
+        <p>• Персональный менеджер</p>
+      </div>
+    </div>
+
+    <div class="tickets-wrapper" style="margin-top: 40px;">
+      <h3 style="font-size: 28px; font-weight: 800; margin-bottom: 12px;">
+        Яркое семейное шоу в Алматы
+      </h3>
+      <p class="family-subtitle">
+        Специальные условия для организаций: групповые билеты, резерв мест,
+        подарки и фотозона
+      </p>
+      <a href="https://wa.me/77078500729?text=Здравствуйте!%20Хочу%20получить%20коммерческое%20предложение" 
+      id="offers"
+      class="btn-commercial" 
+      target="_blank"> 
+      Получить коммерческое предложение </a>
+    </div>
+  </div>
+</section>
+
+<section class="section section-blue">
+  <div class="container section-inner reveal-on-scroll">
+    <h2 class="decor-title">Новогоднее фэнтези-шоу для детей 3–12 лет</h2>
+    <p class="section-subtitle">
+      Яркая сказка, профессиональные актёры, уникальные костюмы, интерактив и атмосфера зимнего волшебства
+    </p>
+
+    <div class="features-grid">
+      <div class="feature-card">
+        <h3>Большие декорации</h3>
+        <p>Свет, музыка, эффект полного погружения</p>
+      </div>
+
+      <div class="feature-card">
+        <h3>Удобные сеансы</h3>
+        <p>10:00 • 12:30 • 15:00 • 17:30</p>
+      </div>
+
+      <div class="feature-card">
+        <h3>Локация</h3>
+        <p>В центре Алматы</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+
 
 
     <section id="story" class="section section-blue">
